@@ -57,6 +57,7 @@ phpMyAdmin - ChangeLog
 - [usability] Removed an unnecessary AJAX request from database search
 - bug #3302419 [navi] Tabs break when squeezing page
 + rfe #3406797 [navi] Stick table tools to top of page on scroll
++ rfe #1632106 [interface] Improved error handling
 
 3.4.8.0 (not yet released)
 - bug #3425230 [interface] enum data split at space char (more space to edit)
